# quickjs-java

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: maven.yml
src/main/java/com/github/stefanrichterhuber/: App.java
src/main/java/com/github/stefanrichterhuber/quickjs/: CompletionStageWrapper.java  QuickJSArray.java  QuickJSContext.java  QuickJSFunction.java  QuickJSObject.java  QuickJSRuntime.java  QuickJSScriptException.java  QuickJSUtils.java  VariadicFunction.java
src/main/java/com/github/stefanrichterhuber/quickjs/internal/: QuickJSObjectEntry.java
src/main/java/com/github/stefanrichterhuber/quickjs/jsr223/: QuickJSInvocationHandler.java  QuickJSScriptBindings.java  QuickJSScriptContext.java  QuickJSScriptEngine.java  QuickJSScriptEngineFactory.java
src/main/java/io/github/stefanrichterhuber/quickjs/: QuickJSArray.java  QuickJSContext.java  QuickJSFunction.java  QuickJSObject.java  QuickJSRuntime.java  QuickJSScriptException.java  QuickJSUtils.java  VariadicFunction.java
src/main/java/io/github/stefanrichterhuber/quickjs/internal/: QuickJSObjectEntry.java
src/main/rust/quickjslib/: Cargo.toml  Cross.toml
src/main/rust/quickjslib/src/: context.rs  foreign_function.rs  java_js_proxy.rs  js_array.rs  js_java_proxy.rs  js_object.rs  lib.rs  runtime.rs  with_locale.rs
src/test/java/com/github/stefanrichterhuber/: AppTest.java
src/test/java/com/github/stefanrichterhuber/quickjs/: JSR223Test.java  QuickJSContextTest.java
src/test/java/io/github/stefanrichterhuber/quickjs/: QuickJSContextTest.java
src/test/resources/: log4j2.xml
