[package]
name = "quickjslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
#opt-level = 'z'
lto = true

[lib]
name = "quickjslib"
crate-type = ["cdylib"]

[dependencies]
# All this dump-* features help debugging
rquickjs = { version = "0.5.1", features = [
    #  "dump-objects",
    #  "dump-read-object",
    #  "dump-bytecode",
] }
jni = { version = "0.21" }
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
# Invocation feature is necessary for tests to spin up a VM
jni = { version = "0.21", features = ["invocation"] }
