[package]
name = "java-quickjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
#opt-level = 'z'
lto = true

[lib]
name = "javaquickjs"
crate-type = ["cdylib"]

[dependencies]
# All this dump-* features help debugging
rquickjs = { version = "0.5.1", features = [
    #  "dump-objects",
    #  "dump-read-object",
    #  "dump-bytecode",
    "bindgen",
] }
jni = { version = "0.21" }
log = { version = "0.4", features = ["std"] }
lazy_static = "1.4.0"

[patch.crates-io]
# Lazy static is required for 'invocation' feature of jni and 'bindgen' feature of rquickjs, but produces some type errors in the latest published verson 1.4 
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs", branch = "master" }


[dev-dependencies]
# Invocation feature is necessary for tests to spin up a VM
jni = { version = "0.21", features = ["invocation"] }
